<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Grocery App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_screen_heading">Continue with Phone</string>
    <string name="verify_next_text">You will receive a 6 digit code \nto verify next </string>
    <string name="enter_your_phone_text">Enter your phone no.:</string>
    <string name="mobile_no..">Ex. 98765XXXXX</string>
    <string name="country_code">+91</string>
    <string name="continue_text">Continue</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="code_sent">Code will be sent to %s </string>
    <string name="cart_total">Total : Rs %1$s </string>
    <string name="create_account">Verify and Proceed</string>
    <string name="did_not_receive">Didn\'t receive code?</string>
    <string name="request_again"> <u><b>Request again </b></u></string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="rank">Rank</string>
    <string name="submit">Submit</string>
    <string name="cate_name_error">Enter Category name</string>
    <string name="cat_rank_error">Enter category rank</string>
    <string name="permission_denied_error">Permission Required to perform this action</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="active">Active</string>
    <string name="product_description">Product Description</string>
    <string name="product_name_error">Please enter product name</string>
    <string name="product_price_error">Please enter valid product price</string>
    <string name="choose_product_category">Please choose product category</string>
    <string name="category_info_fetch_error">Error Fetching Category Info</string>
    <string name="create_product_error">Error creating product.</string>
    <string name="product_created_msg">Product Created Successfully</string>
    <string name="product_updated_msg">Product Updated Successfully</string>
    <string name="products">Products</string>
    <string name="fetch_product_list_error">Unable to fetch Products!</string>
    <string name="edit">Edit</string>
    <string-array name="product_active">
        <item>True</item>
        <item>False</item>
    </string-array>
    <string name="edit_product">Edit Product</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="not_available">Not Available</string>
    <string name="no_product_available">No Product Available.</string>
    <string name="cat_added_msg">Category added successfully</string>
    <string name="cat_updated_msg">Category updated successfully</string>
    <string name="cat_creation_error_msg">Error Creating Category!</string>
    <string name="account_details">Account Details</string>
    <string name="name">Your Name</string>
    <string name="mobile">Your Mobile No.</string>
    <string name="address">Your Address</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="tags">Tags</string>
    <string name="todo">TODO</string>
    <string name="vegetables">vegetables , fruits apple mango,drinks,biscuits</string>
    <string name="amount_with_quantity">$17.00/kg</string>
    <string name="price_of_item">$17.20</string>
    <string name="count">0</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="offer">Offer</string>
    <string name="about_us">About us</string>
    <string name="category_image">Category Image</string>
    <string name="category">Category</string>
    <string name="see_all">See all</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="backpress">BackPress</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="details">Packed with vitamins, fiber, and particularly high levels of antioxidants known as polyphenols, strawberries are a sodium-free, fat-free, cholesterol-free, low-calorie food. They are among the top 20 fruits in antioxidant capacity and are a good source of manganese and potassium. Just one serving -- about eight strawberries -- provides more vitamin C than an orange.</string>
    <string name="settings">Settings</string>
    <string name="product">Product</string>
    <string name="profile">Profile</string>
    <string name="rs_symbol">Rs. %s</string>
    <string name="per_symbol">-%s%% </string>
    <string name="order_placed_msg">Your order #%1$s was placed for delivery.</string>
    <string name="order_confirmed_msg">Your order is confirmed. Will deliver soon.</string>
    <string name="order_processing_msg">Your product is processing to deliver you on time.</string>
    <string name="order_delivered_msg">Product delivered to you and marked as delivered by customer.</string>
    <string name="no_order_available_msg">No Orders available</string>
    <string name="orderTitle">Orders</string>
    <string name="order_created_at">Ordered on: %1$s</string>
    <string name="orderCreated">Ordered on: %1$s</string>
    <string name="order_delivered_at">Delivered on: %1$s</string>
    <string name="order_detail">Order Detail</string>
    <string name="rs">Rs. %1$s</string>
    <string name="neg_rs">- Rs. %1$s</string>
    <string name="total">Total</string>
    <string name="move_order_msg">Move Order to %1$s</string>
    <string name="move_order_to_next_msg">Move order to next state</string>
    <string name="order_status_changed_msg">Order status changed successfully.</string>
    <string name="unable_to_change_status_error">Unable to change status.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="order_status_move_msg">Do you really want to move this order to %1$s state.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offer_text">Offer</string>
    <string name="order_text">Order</string>
    <string name="home_text">Home</string>
    <string name="more_text">More</string>
    <string name="order_details_page_header">Order Details</string>
    <string name="order_time">9:30 AM</string>
    <string name="order_placed_text">Order Placed</string>
    <string name="order_placed_description">Your Order#241562 is placed for delivery</string>
    <string name="pending_text">Pending</string>
    <string name="pending_order_description">Your Order is pending for confirmation. Will confirm within 5 min.</string>
    <string name="confirmed_text">Confirmed</string>
    <string name="confirmed_order_description">Your order is confirmed and delivered within 30 minutes</string>
    <string name="processing_text">Processing</string>
    <string name="processing_order_description">Your product is processing to deliver you soon.</string>
    <string name="delivered_text">Delivered</string>
    <string name="delivered_order_description">Product will deliver to you and marked as delivered by customer</string>
    <string name="all_orders">All Orders</string>
    <string name="description">Description</string>
    <string name="order_created_msg">Order created successfully.</string>
    <string name="order_create_error">Error in creating order</string>
    <string name="search_hint">Search your daily grocery food...</string>
    <string name="filter_by_status">Filter By Status</string>
    <string name="searchHeaderText">Let\'s search your grocery food</string>
    <string name="discount_per">Discount (%)</string>
    <string name="zero_count">0</string>
    <string name="order_placed_title">Order Placed</string>
    <string name="order_confirmed_title">Confirmed</string>
    <string name="order_processing_title">Processing</string>
    <string name="order_delivered_title">Delivered</string>
    <string name="grocery_notification_id">grocery_channel_id</string>
    <string name="grocery_channel_name">Grocery Notification</string>
    <string name="_has_placed_order">%1$s has placed an order.</string>
    <string name="order_received">Order Received</string>
    <string name="order_cancelled_title">Order Cancelled</string>
    <string name="_order_cancelled">%1$s has cancelled order #%2$s.</string>
    <string name="filter_by_text">Filter By</string>
    <string name="discount_text">Discount</string>
    <string name="to_do">TODO</string>
    <string name="discount_percent"> - %1$s %%</string>
    <string name="callText">Call for free\n%s</string>
    <string-array name="discountDropDown">
        <item>Lowest Discount</item>
        <item>Highest Discount</item>
    </string-array>
    <string name="move_order_to">Move order to</string>
    <string name="order_declined_title">Order Declined</string>
    <string name="order_declined_description">Seller has Declined your order.</string>
    <string-array name="order_placed_next_options">
        <item>Confirm</item>
        <item>Decline</item>
    </string-array>
    <string name="product_cart_details">Rs.%1$s (%2$s x %3$s)</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="total_discount">Total Discount</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="cart_text_header">Cart</string>
    <string name="cart_text_when_empty">Your Cart is Empty</string>
    <string name="checkout_btn">Checkout</string>
    <string name="_30_discount_text">30 % Discount</string>
    <string name="offer_description_text_WH">Order any food from the app \n and get the discount</string>
    <string name="order_now_text">Order Now</string>
    <string name="categories_text">Categories</string>
    <string name="welcome_text_header">Hey %s,\nWelcome to the grocery store</string>
    <string name="description_text">Description</string>
    <string name="fruits_text">Fruits</string>
    <string name="products_unavailable">Products are currently \n unavailable</string>
    <string name="search_product">Search Product</string>
    <string name="try_again">Try Again</string>
    <string name="something_went_wrong">Something went Wrong</string>
    <string name="offers_text_header">Offers</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_more_tags">Add More Tags</string>
    <string name="search_tags">Search Tags</string>
    <string name="done">Done</string>
    <string name="entering_mobile_number">Please enter your phone number</string>
    <string name="enter_10_digit_mobile_number">Please enter a 10 digit phone number</string>
    <string name="empty_text_order">You Haven\'t Shopped \nwith Us Yet</string>
</resources>