<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_white_search"
        android:title="@string/search_product"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shop"
        android:title="@string/products"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_white"
        android:title="@string/add_category"
        app:showAsAction="ifRoom" />


</menu>