<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_svg_downlaod"
        />

    <item android:id="@+id/order"
        android:title="@string/order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/vector_order"
      />

    <item
        android:id="@+id/placeholder"
        android:title=""
        app:showAsAction="ifRoom"
       />

    <item android:id="@+id/offer"
        android:title="@string/offer"
        app:showAsAction="ifRoom"
        android:icon="@drawable/vector_offer"
        />

    <item android:id="@+id/more"
        android:title="@string/more"
        app:showAsAction="ifRoom"
        android:icon="@drawable/more_option_svg"
        />


</menu>