<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/discount_container"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:background="@drawable/without_header_image_background"
        android:elevation="2dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/cardview_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/discount_image_background"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/vegetables_discount"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxWidth="160dp"
            android:maxLines="2"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/ptsans_bold"
            android:gravity="center_horizontal"
            android:text="@string/_30_discount_text"
            android:textColor="#27ae60"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardview_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/offer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/offer_description_text_WH"
            android:textColor="#3C3E3D"
            android:maxWidth="160dp"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardview_image"
            app:layout_constraintTop_toBottomOf="@id/discount" />

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ptsans_bold"
            android:text="@string/order_now_text"
            android:textColor="#27ae60"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/cardview_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/offer_text"
            app:layout_constraintStart_toStartOf="@id/offer_text"
            app:layout_constraintTop_toBottomOf="@id/offer_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>